Additional desktop styling, fixed weather item heights on mobile view

--- a/src/css/forecast.css
+++ b/src/css/forecast.css
@@ -27,7 +27,7 @@
 
 .block {
 	width: 95vw;
-	height: 8em;
+	/*height: 8em;*/
 	margin: auto;
 	border-bottom: 1px solid #b7b7b7;
 	margin-top: .75em;
@@ -87,6 +87,10 @@
 
 /*-----EXPANDED-STATE-STYLES------*/
 
+.expanded .block {
+	height: 8em;
+}
+
 .expanded .cloud-icon:before {
 	content: "\f0c2";
 	font-family: "FontAwesome";
@@ -117,7 +121,7 @@
 .expanded .day {
 	display: block;
 	margin-top: .2em;
-	font-size: 1em;
+	font-size: 1.2em;
 	margin: 0;
 }
 
@@ -176,9 +180,9 @@ button {
 		flex-wrap: wrap;
 	}
 	.weather-item {
-		width: 360px;
+		width: 260px;
 		/*flex-basis: auto;*/
-		height: 575px;
+		height: 400px;
 		border-top: 2px solid #aaa;
 		border-bottom: 2px solid #aaa;
 		padding: 10px;
@@ -193,26 +197,35 @@ button {
 	}
 
 	.icon-block {
-		height: 200px;
+		height: 100px;
 	}
 	.cloud-icon:before {
-		font-size: 8em;
+		font-size: 4em;
 		padding-left: .1em;
 	}
 	.clear-icon:before {
-		font-size: 8em;
+		font-size: 4em;
 	}
 	.rain-icon:before {
-		font-size: 8em;
+		font-size: 4em;
 	}
 	.day {
 		display: block;
-		margin: .2em 0 0 .1em;
+		margin: .2em 0 0 0;
 		font-weight: bold;
 	}
 	.info-block {
-		font-size: 2em;
+		/*font-size: .75em;*/
 		display: block;
+		margin-top: 1.5em;
+	}
+	.desc,
+	.wind {
+		font-size: 1.2em;
+		/*line-height: 1.5em;*/
+	}
+	.desc {
+		font-weight: bold;
 	}
 	.hi,
 	.lo {
